--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
-    background:powderblue;
+    background:#E6BDE2;
 }
 h1{
-    color:gray;
+    color:forestgreen;
     text-align:center;
 }
