--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     font-family:"Arial",Times, serif;
 }
 h1{
-    color:ivory;
+    color:gray;
     text-align:center;
     font-family:"Arial",Times,serif;
 }
