--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@ h1{
 p{
     color:darkolivegreen;
 }
+.projects { display:flex; flex-wrap:wrap; } /* condensed to save space */
+.project {
+width: 30%;
+margin: 10px;
+padding: 20px 10px;
+background: white; /* pick a color */
+border-radius: 25%;
+}
