--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
     text-align:center;
     font-family:"Arial",Times, serif;
 }
+title{
+    color:gray;
+    text-align:center;
+    font-family:"Arial",Times,serif;
+}
 h1{
     color:gray;
     text-align:center;
