--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 .home-page{
-    background:grey;
+    background:#F2F2F5;
     text-align:center;
     font-family:"Arial",Times, serif;
 }
 title{
-    color:gray;
+    color:#C8A2C8;
     text-align:center;
     font-family:"Arial",Times,serif;
 }
 h1{
-    color:gray;
+    color:#E6DAF0;
     text-align:center;
     font-family:"Arial",Times,serif;
 }
 p{
-    color:darkolivegreen;
+    color:#2E2E3A;
 }
 
 
